test/org/midica/testfiles/failing/var-name-eq-value.midica
INCLUDE inc/instruments.midica

VAR $a = $a

